--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  mysql_db:
+  db:
     image: mysql:latest
     restart: always
     container_name: mysql
@@ -9,42 +9,33 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: movies
     ports:
-      - "6033:3306"
+      - '3308:3308' # Mapping host port 3308 to container port 3306
     volumes:
-      - ./data-db:/var/lib/mysql
-    expose:
-      - '3306'
+      - ./data:/var/lib/mysql
       
   phpmyadmin:
-    image: phpmyadmin:latest
+    image: phpmyadmin/phpmyadmin:latest
     restart: always
     container_name: phpmyadmin
     environment:
-      PMA_HOST: mysql_db
-      MYSQL_ROOT_PASSWORD: root 
-      MYSQL_USERNAME: root
-      MYSQL_PASSWORD: root
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
     ports:
-      - '8081:80'
+      - '8080:80'
     depends_on:
-     - mysql_db
-    volumes:
-      - /sessions
-    expose:
-      - '8081'
+      - db
 
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: movie-api-app
-    environment:
-      - PORT=${PORT}
+    container_name: movie-api
     ports:
       - '3000:3000'
     depends_on:
-      - mysql_db
+      - db
+      - phpmyadmin
+    environment:
+      - TYPEORM_HOST=db
     volumes:
       - ./src:/app/src
-    expose:
-      - '3000'
