--- a/docker-compose copy.yml
+++ b/docker-compose copy.yml
@@ -5,25 +5,12 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER: 'root'
       - POSTGRES_PASSWORD=postgres
     container_name: postgres
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
       - '5432:5432'
-
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: always
-    container_name: nest-pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
-    ports:
-      - '5050:80'
-    depends_on:
-      - db
 
   app:
     build:
@@ -39,45 +26,55 @@ services:
     volumes:
       - ./src:/app/src
 
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    container_name: nest-pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=pgadmin4
+    ports:
+      - '5050:80'
+    depends_on:
+      - db
 
-  mysql_db:
+#-------------------------------
+services:
+  db:
     image: mysql:latest
     restart: always
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: movie
+      MYSQL_DATABASE: movies
     ports:
-      - "6033:3307"
+      - '3308:3308' # Mapping host port 3308 to container port 3306
     volumes:
-      - ./data-db:/var/lib/mysql
+      - ./data:/var/lib/mysql
       
   phpmyadmin:
-    image: phpmyadmin:latest
+    image: phpmyadmin/phpmyadmin:latest
     restart: always
     container_name: phpmyadmin
     environment:
-      PMA_HOST: mysql_db
-      MYSQL_ROOT_PASSWORD: root 
-      MYSQL_USERNAME: root
-      MYSQL_PASSWORD: root
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
     ports:
-      - 8081:80
+      - '8080:80'
     depends_on:
-     - mysql_db
-    volumes:
-      - /sessions
+      - db
 
-  movie_app:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: movie-api-app
-    environment:
-      - PORT=${PORT}
+    container_name: movie-api
     ports:
       - '3000:3000'
     depends_on:
-      - mysql_db
+      - db
+      - phpmyadmin
+    environment:
+      - TYPEORM_HOST=db
     volumes:
-      - ./src:/movie_app/src
+      - ./src:/app/src
